sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort() {
 	var detrompeur==1
  var variable==detrompeur
  while (variable!=detrompeur){
  	for (compteur<-0 to getNombreValeurs()-1){
      if (compteur>compteur+1){
        echange(compteur,compteur+1)
      }
    }
    detrompeur=detrompeur1
  }
	
}
/*def arrayFront9(nums:Array[Int]): Boolean = {*/